--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,79 @@
-/* You can add global styles to this file, and also import other style files */
+/*
+    COLORES IBM
+*/
+$purple-100: #1c0f30;
+$purple-90: #31135e;
+$purple-80: #491d8b;
+$purple-70: #6929c4;
+$purple-60: #8a3ffc;
+$purple-50: #a56eff;
+$purple-40: #be95ff;
+$purple-30: #d4bbff;
+
+$blue-100: #001141;
+$blue-90: #001d6c;
+$blue-80: #002d9c;
+$blue-70: #0043ce;
+$blue-60: #0f62fe;
+$blue-50: #4589ff;
+$blue-40: #78a9ff;
+$blue-30: #a6c8ff;
+
+
+$magenta-60: #d02670;
+$cyan-100: #61c5e6;
+
+/*
+    Background
+*/
+.bg-cyan-100{
+    background-color: $cyan-100;
+}
+.bg-purple-100{
+    background-color: $purple-100;
+}
+.bg-purple-90{
+    background-color: $purple-90;
+}
+.bg-purple-80{
+    background-color: $purple-80;
+}
+.bg-purple-70{
+    background-color: $purple-70;
+}
+.bg-purple-60{
+    background-color: $purple-60;
+}
+.bg-purple-50{
+    background-color: $purple-50;
+}
+.bg-purple-40{
+    background-color: $purple-40;
+}
+.bg-purple-30{
+    background-color: $purple-30;
+}
+.bg-blue-100{
+    background-color: $blue-100;
+}
+.bg-blue-90{
+    background-color: $blue-90;
+}
+.bg-blue-80{
+    background-color: $blue-80;
+}
+.bg-blue-70{
+    background-color: $blue-70;
+}
+.bg-blue-60{
+    background-color: $blue-60;
+}
+.bg-blue-50{
+    background-color: $blue-50;
+}
+.bg-blue-40{
+    background-color: $blue-40;
+}
+.bg-blue-30{
+    background-color: $blue-30;
+}
