--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,7 +8,7 @@
             <i class="fas fa-home fa-2x"></i>
         </button>
         - 
-        <button (click)="rutas('/ingresar')" class="btn btn-outline-light my-2 my-sm-0" type="submit">
+        <button (click)="rutas('/registrar')" class="btn btn-outline-light my-2 my-sm-0" type="submit">
             <i class="fas fa-user fa-2x"></i>
         </button>
     </div>
