--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,5 +1,5 @@
 <form class="w-75" method="post">
-    <h3 class="mb-3">Registro de usuario</h3>
+    <h3 class="mb-3 text-center">Registro de usuario</h3>
     <div class="mb-3">
         <label for="exampleInput1" class="form-label">Nombre Completo</label>
         <input type="text"  [(ngModel)]="name" name="name" class="form-control" id="exampleInput1" required>
@@ -9,8 +9,12 @@
         <input type="email"  [(ngModel)]="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
     </div>
     <div class="mb-3">
-        <label for="exampleInputPassword1" class="form-label">Password</label>
-        <input type="password" [(ngModel)]="password" name="password" class="form-control" id="exampleInputPassword1" required>
+        <label for="exampleInputEmail1" class="form-label">Edad</label>
+        <input type="number"  [(ngModel)]="age" name="age" class="form-control" id="exampleInputEmail1" required>
+    </div>
+    <div class="mb-3">
+        <label for="exampleInputPassword1" class="form-label">Distrito</label>
+        <input type="text" [(ngModel)]="distrito" name="distrito" class="form-control" id="exampleInputPassword1" required>
     </div>   
-    <button type="submit" (click)="register()" class="btn btn-primary">Registrar</button>
+    <button type="submit" (click)="register()" class="btn btn-info">Registrar</button>
 </form>
